# bluelock

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  Examine_the_project._Look_for_errors_and.md  Makefile  PLAN.md  PROMPT.md  README.md  pyproject.toml  test_inhibitor.py  tox.ini
rpm/: bluelock-sudoers  bluelock.desktop  bluelock.spec.in
src/bluelock/: __init__.py  __main__.py  about_dialog.py  app.py  config.py  config_dialog.py  mon.py  rssi_history.py  rssi_plot.py  session_locker.py  signal_processor.py  state_machine.py  tray.py
src/bluelock/bluetooth/: __init__.py  _adapters.py  _base.py  _bluez_dbus.py  _types.py  _utils.py
tests/: conftest.py  test_adapters.py  test_bluetooth_utils.py  test_config.py  test_config_dialog.py  test_hci_version.py  test_monitor_aggregation.py  test_monitor_hotplug.py  test_rssi_history.py  test_screensaver_inhibitor.py  test_session_locker.py  test_signal_processor.py  test_state_machine.py
